// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Member Feed rendering renders correctly for member feed 1`] = `
<SectionList
  ListHeaderComponent={[Function]}
  contentContainerStyle={
    Object {
      "paddingBottom": 10,
    }
  }
  data={Array []}
  disableVirtualization={false}
  extraData={
    Object {
      "isListScrolled": false,
    }
  }
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onEndReached={[Function]}
  onEndReachedThreshold={0.2}
  onRefresh={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "2",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "1",
            "likes_count": 0,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "4",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "2",
            "likes_count": 0,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-03-01 12:00:00",
      },
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "1",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "4",
            "likes_count": 11,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "5",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "3",
            "likes_count": 42,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-01-01 12:00:00",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    Object {
      "backgroundColor": "#ECEEF2",
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`item renders correctly 1`] = `
<Connect(CelebrateItem)
  event={
    Object {
      "data": Array [
        Object {
          "adjective_attribute_value": "2",
          "celebrateable_type": "accepted_challenge",
          "changed_attribute_value": "2018-03-01 12:00:00",
          "id": "1",
          "likes_count": 0,
          "subject_person_name": "Roge Dog",
        },
        Object {
          "adjective_attribute_value": "4",
          "celebrateable_type": "interaction",
          "changed_attribute_value": "2018-03-01 12:00:00",
          "id": "2",
          "likes_count": 0,
          "subject_person_name": "DG With me?",
        },
      ],
      "date": "2018-03-01 12:00:00",
    }
  }
  organization={
    Object {
      "id": "456",
    }
  }
/>
`;

exports[`no header rendering renders correctly for no header 1`] = `
<SectionList
  contentContainerStyle={
    Object {
      "paddingBottom": 10,
    }
  }
  data={Array []}
  disableVirtualization={false}
  extraData={
    Object {
      "isListScrolled": false,
    }
  }
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onEndReached={[Function]}
  onEndReachedThreshold={0.2}
  onRefresh={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "2",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "1",
            "likes_count": 0,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "4",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "2",
            "likes_count": 0,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-03-01 12:00:00",
      },
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "1",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "4",
            "likes_count": 11,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "5",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "3",
            "likes_count": 42,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-01-01 12:00:00",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    Object {
      "backgroundColor": "#ECEEF2",
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`renderHeader match snapshot 1`] = `
<React.Fragment>
  <Connect(CelebrateFeedHeader)
    organization={
      Object {
        "id": "456",
      }
    }
  />
  <ShareStoryInput
    dispatch={[Function]}
    organization={
      Object {
        "id": "456",
      }
    }
  />
</React.Fragment>
`;

exports[`renders header with ShareStoryInput 1`] = `
<React.Fragment>
  <Connect(CelebrateFeedHeader)
    organization={
      Object {
        "id": "456",
      }
    }
  />
  <ShareStoryInput
    dispatch={[Function]}
    organization={
      Object {
        "id": "456",
      }
    }
  />
</React.Fragment>
`;

exports[`renders header with no ShareStoryInput 1`] = `
<React.Fragment>
  <Connect(CelebrateFeedHeader)
    organization={
      Object {
        "id": "456",
      }
    }
  />
</React.Fragment>
`;

exports[`renders section header 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "#ECEEF2",
      "paddingVertical": 10,
    }
  }
>
  <DateComponent
    date="2018-08-13T12:00:00.000Z"
    format="relative"
    style={
      Object {
        "color": "#505256",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  />
</View>
`;

exports[`renders with clear notification set renders correctly with clear notification set 1`] = `
<SectionList
  contentContainerStyle={
    Object {
      "paddingBottom": 10,
    }
  }
  data={Array []}
  disableVirtualization={false}
  extraData={
    Object {
      "isListScrolled": false,
    }
  }
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onEndReached={[Function]}
  onEndReachedThreshold={0.2}
  onRefresh={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "2",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "1",
            "likes_count": 0,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "4",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-03-01 12:00:00",
            "id": "2",
            "likes_count": 0,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-03-01 12:00:00",
      },
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "1",
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "4",
            "likes_count": 11,
            "subject_person_name": "Roge Dog",
          },
          Object {
            "adjective_attribute_value": "5",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-01-01 12:00:00",
            "id": "3",
            "likes_count": 42,
            "subject_person_name": "DG With me?",
          },
        ],
        "date": "2018-01-01 12:00:00",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    Object {
      "backgroundColor": "#ECEEF2",
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
